Updates to nfc_wrangler Pt. 6.

--- a/nfc_wrangler/src/Makefile
+++ b/nfc_wrangler/src/Makefile
@@ -2,4 +2,4 @@ PYTHON_CFLAGS := $(shell python3-config --cflags --embed)
 PYTHON_LDFLAGS := $(shell python3-config --ldflags --embed)
 
 nfc_wrangler: nfc_wrangler.c
-	gcc -fno-stack-protector -O0 $? $(PYTHON_CFLAGS) $(INCLUDES) -o $@ $(PYTHON_LDFLAGS)
+	gcc $(PYTHON_CFLAGS) $(INCLUDES) -fno-stack-protector -O0 $? -o $@ $(PYTHON_LDFLAGS)
